Fixing Scroll behavior on safari

--- a/src/styles/pages.scss
+++ b/src/styles/pages.scss
@@ -45,6 +45,10 @@
 
   padding: 0 2em;
 
+  & > * {
+    flex-shrink: 0;
+  }
+
   
   .main-page-content {
     padding: 0;
